[package]
name = "sol-pnl-challenge"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow     = "1"
clap       = { version = "4", features = ["derive"] }
futures    = "0.3"
reqwest    = { version = "0.12", features = ["json", "gzip", "brotli"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
tokio      = { version = "1", features = ["full"] }

[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1
panic         = "abort"
strip         = true
